# aws-glue-libs

./: catalog-info.yaml  setup.cfg
