[metadata]
name = awsglue-local
version = 3.0.0
author = Qmetric
description =  AWS Glue local wheel
long_description_content_type='text/markdown'
long_description = file: README.md
keywords = aws,glue,awsglue,spark,qmetric
classifiers =
    Framework :: awsglue
    Framework :: pyspark
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.7.9

[options]
zip_safe = False
packages = find:
python_requires= >= 3.7, < 3.8
install_requires =
    pyspark==3.1.1
    